<resources>
    <string name="app_name">Contact Agenda</string>
    <string name="searchPlaceholder">Enter Name</string>
    <string name="searchButton">Search</string>
    <string name="addButton">Add</string>
    <string name="nameLabel">Name</string>
    <string name="phoneLabel">Phone</string>
    <string name="addNamePlaceholder">Enter Name</string>
    <string name="addPhonePlaceholder">Enter Phone</string>
    <string name="backButton">Back</string>
    <string name="errorMsg">The text fields can not be empty.</string>
    <string name="addingContact">Saving new contact...</string>
    <string name="updatingContact">Updating contact...</string>
</resources>
